# Demon

./: .ci-nudge  .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCKER_PIPELINE_PLAN.md  FINAL_HANDOFF_MEMO.md  GHCR_FIX_SUMMARY.md  Makefile  PR_BODY.txt  PR_COMMENT.txt  PR_COMMENT2.txt  README.md  audit-pr-threads.sh  audit-pr-triage-md.sh  deny.toml  result.json  rust-toolchain.toml
bootstrapper/demonctl/: Cargo.toml
bootstrapper/demonctl/src/: bundle.rs  lib.rs  libindex.rs  main.rs  provenance.rs
bootstrapper/demonctl/src/tools/: sign_bundle.rs
bootstrapper/demonctl/tests/: bootstrap_spec.rs  bundle_interpolation_spec.rs  canonical_and_verify_spec.rs  libindex_spec.rs  provenance_spec.rs
capsules/container-exec/: Cargo.toml  README.md
capsules/container-exec/src/: lib.rs
capsules/graph/: Cargo.toml
capsules/graph/src/: events.rs  lib.rs  storage.rs  types.rs
capsules/graph/tests/: graph_integration_spec.rs
controller/scale-hint-handler/: Cargo.toml
controller/scale-hint-handler/src/: autoscale.rs  config.rs  consumer.rs  lib.rs  metrics.rs
controller/scale-hint-handler/tests/: integration_spec.rs
crates/config-loader/: Cargo.toml
crates/config-loader/src/: lib.rs  provider_factory.rs  secrets.rs  secrets_store.rs  vault_http.rs
crates/config-loader/tests/: config_validation_spec.rs  vault_http_httptest_spec.rs  vault_http_integration_spec.rs
crates/envelope/: Cargo.toml
crates/envelope/src/: builder.rs  envelope.rs  lib.rs  validation.rs
crates/envelope/tests/: builder_spec.rs  derive_macro_spec.rs  fixture_validation_spec.rs
demonctl/: Cargo.toml  README.md
demonctl/resources/addons/monitoring/: grafana-configmap.yaml  grafana-deployment.yaml  grafana-service.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-service.yaml
demonctl/resources/k8s/: engine.yaml  ingress.yaml  namespace.yaml  nats.yaml  operate-ui.yaml  runtime.yaml
demonctl/src/: docker.rs  github.rs  k8s_bootstrap.rs  main.rs
demonctl/src/commands/: flow.rs  inspect.rs  mod.rs
demonctl/src/commands/app/: alias.rs  install.rs  list.rs  manifest.rs  mod.rs  (+2 more)
demonctl/src/k8s_bootstrap/: addons.rs  k3s.rs  mod.rs  secrets.rs  templates.rs
demonctl/tests/: app_install_signature_spec.rs  app_pack_lifecycle_spec.rs  bootstrap_spec.rs  config_validate_spec.rs  contracts_bundle_spec.rs  contracts_fetch_bundle_spec.rs  contracts_validate_spec.rs  docker_digests_spec.rs  flow_cli_spec.rs  inspect_spec.rs  k8s_bootstrap_cli_spec.rs  run_alias_permissions_spec.rs  run_save_spec.rs  run_workspace_mount_spec.rs  secrets_cli_spec.rs  secrets_provider_cli_spec.rs  vault_http_cli_spec.rs
engine/: Cargo.toml  Dockerfile  README.md
engine/rituals/: Cargo.toml
engine/rituals/src/: lib.rs
engine/src/: lib.rs  main.rs
engine/src/graph/: mod.rs
engine/src/rituals/: approvals.rs  escalation.rs  guards.rs  log.rs  mod.rs  state.rs  timers.rs
engine/tests/: agent_scale_hint_contracts_spec.rs  approval_contracts_spec.rs  approvals_integration.rs  approvals_ttl_integration.rs  approvals_ttl_spec.rs  envelope_result_spec.rs  escalation_integration.rs  event_log_replay_spec.rs  graph_contracts_spec.rs  graph_storage_integration_spec.rs  jetstream_integration_spec.rs  per_cap_quota_integration.rs  policy_contracts_spec.rs  quota_serialization_spec.rs  tenant_isolation_spec.rs  tenant_quotas_spec.rs  timer_wheel_spec.rs  ttl_worker_integration.rs  ttl_worker_restart.rs  ui_manifest_contracts_spec.rs  wards_quotas_spec.rs
operate-ui/: .dockerignore  Cargo.toml  Dockerfile  README.md
operate-ui/playwright/: manual_smoke.js  package-lock.json  package.json  playwright.config.ts
operate-ui/playwright/test-results/: .last-run.json
operate-ui/playwright/tests/: app_pack_cards.spec.ts  approval_actions.spec.ts  canvas_ui.spec.ts  contracts_browser.spec.ts  run_streaming.spec.ts  runs_empty.spec.ts  scale_metrics.spec.ts
operate-ui/src/: agent_flows.rs  api_version.rs  app_packs.rs  auth.rs  card_renderers.rs  contracts.rs  feature_flags.rs  jetstream.rs  lib.rs  main.rs  routes.rs  tenant.rs
operate-ui/src/templates/: mod.rs
operate-ui/static/: hoss-upload.html
operate-ui/templates/: app_pack_cards.html  base.html  canvas_viewer.html  contracts_browser.html  error.html  form_renderer.html  graph_viewer.html  run_detail.html  runs_list.html  workflow_viewer.html
operate-ui/tests/: admin_probe_spec.rs  agent_flows_spec.rs  approvals_routes_spec.rs  bundle_status_spec.rs  config.rs  contracts_api_spec.rs  e2e.rs  e2e_nats.rs  envelope_rendering_spec.rs  filters_spec.rs  form_renderer_spec.rs  graph_viewer_spec.rs  hoss_card_spec.rs  hotfix_clean_machine_spec.rs  runs_filtering_spec.rs  sse_spec.rs  templates.rs  templates_spec.rs  unit.rs  workflow_viewer_spec.rs
operate-ui/tests/fixtures/: hoss_envelope.json
registry/: Cargo.toml
registry/src/: auth.rs  kv.rs  lib.rs  main.rs  routes.rs
registry/tests/: healthz_spec.rs  http_integration_spec.rs  kv_integration_spec.rs  publish_contract_spec.rs
runtime/: .dockerignore  Cargo.toml  Dockerfile  README.md
runtime/link/: router.rs
runtime/src/: audit.rs  bundle.rs  contracts.rs  lib.rs  main.rs
runtime/src/graph/: mod.rs  query.rs
runtime/src/link/: router.rs
runtime/src/server/: graph.rs  mod.rs
runtime/src/telemetry/: mod.rs  scale_hint.rs
runtime/tests/: bundle_audit_spec.rs  bundle_integration_spec.rs  config_integration_spec.rs  container_exec_dispatch_spec.rs  container_exec_echo_integration_spec.rs  contracts_envelope_spec.rs  graph_api_spec.rs  graph_dispatch_spec.rs  provider_integration_spec.rs  ritual_api_spec.rs  ritual_sse_cancel_spec.rs  scale_hint_telemetry_spec.rs
tooling/contract-linter/: Cargo.toml
tooling/contract-linter/src/: lib.rs  main.rs
wards/: Cargo.toml
wards/src/: approvals.rs  config.rs  lib.rs  policy.rs  schedule.rs
wards/tests/: approvals_spec.rs  quotas_compact_parser_spec.rs  quotas_precedence_spec.rs  time_based_policies_spec.rs  time_policy_integration_spec.rs
(+317 files in other folders)
