[workspace]
members = [
  "engine",
  "runtime",
  "wards",
  "capsules/echo",
  "demonctl",
  "operate-ui",
  "bootstrapper/demonctl",
  "crates/envelope",
  "crates/envelope-derive",
  "crates/config-loader"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Hedgehog Demon Team"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
humantime = "2.1"
async-nats = "0.33"
tokio = { version = "1", features = ["full"] }
jsonschema = "0.18"
futures-util = "0.3"
base64ct = "=1.7.1"
once_cell = "1.19"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "blocking"] }
