[package]
name = "demonctl"
version = "0.0.1"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
engine = { path = "../engine" }
bootstrapper-demonctl = { path = "../bootstrapper/demonctl" }
tokio = { workspace = true }
envelope = { path = "../crates/envelope" }
serde = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.0"
predicates = "3.0"
