[package]
name = "demonctl"
version = "0.0.1"
edition = "2021"
license.workspace = true

[dependencies]
capsules_graph = { path = "../capsules/graph" }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
engine = { path = "../engine" }
bootstrapper-demonctl = { path = "../bootstrapper/demonctl" }
tokio = { workspace = true }
envelope = { path = "../crates/envelope" }
serde = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
config-loader = { path = "../crates/config-loader" }
serde_yaml = { workspace = true }
jsonschema = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
base64 = "0.22.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.0"
predicates = "3.0"
httptest = "0.16"
