[package]
name = "engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "engine"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
runtime = { path = "../runtime" }
humantime = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
wards = { path = "../wards" }

[dev-dependencies]
jsonschema = { workspace = true }
tokio-test = "0.4"
serde_json = { workspace = true }
operate-ui = { path = "../operate-ui" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
axum = { version = "0.7" }
serial_test = "2"
