[package]
name = "operate-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
runtime = { path = "../runtime" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
async-nats.workspace = true
futures-util.workspace = true
tokio-stream = "0.1"
async-stream = "0.3"
dirs = "5.0"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# HTML templating  
tera = "1"

# HTTP client for health checks
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3"
tower = "0.4"
axum-test = "14.0"
