[package]
name = "runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "runtime"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
envelope = { path = "../crates/envelope" }
config-loader = { path = "../crates/config-loader" }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
capsules_echo = { path = "../capsules/echo" }
async-nats = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
metrics = "0.21"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"
