[package]
name = "bootstrapper-demonctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-nats = { workspace = true }
futures-util = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_yaml = { workspace = true }
jsonschema = { workspace = true }
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3"

[features]
dev-tools = []

[[bin]]
name = "sign_bundle"
path = "src/tools/sign_bundle.rs"
required-features = ["dev-tools"]
