[package]
name = "bootstrapper-demonctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
base64 = "0.22"
ed25519-dalek = "2.2"
sha2 = "0.10"
hex = "0.4"
jsonschema = "0.27"
tokio = { workspace = true }
async-nats = { workspace = true }
futures-util = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[[bin]]
name = "bootstrapper-demonctl"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.8"
