[package]
name = "capsules_graph"
version = "0.0.1"
edition = "2021"
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
envelope = { path = "../../crates/envelope" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
jsonschema = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }