[package]
name = "scale-hint-handler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
async-trait = "0.1"
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Metrics - temporarily disabled due to version conflict
# Will be re-enabled in follow-up PR
# metrics = "0.21"
# metrics-exporter-prometheus = "0.13"

[[bin]]
name = "demon-scale-hint-handler"
path = "src/bin/demon-scale-hint-handler.rs"

[dev-dependencies]
wiremock = "0.6"
