[package]
name = "config-loader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
jsonschema.workspace = true
once_cell.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile = "3.8"